# Stamina

./: COPYING  README.md  meson.build  org.intsoftware.Stamina.json
data/: org.intsoftware.Stamina.desktop.in  org.intsoftware.Stamina.gschema.xml  org.intsoftware.Stamina.metainfo.xml.in  org.intsoftware.Stamina.service.in
data/icons/: meson.build
data/languages/: cpp.iutf  dart.iutf  go.iutf  java.iutf  js.iutf  python.iutf  rust.iutf  ts.iutf
lib/: iutf.vapi
po/: POTFILES.in  meson.build
src/: IUTFHandler.vala  LanguageLoader.vala  Main.vala  Preferences.vala  SessionManager.vala  Timer.vala  Utils.vala  Window.vala
